Bug fixd requisition list page

--- a/KGERP/Views/BillRequisition/BillRequisitionMasterCommonList.cshtml
+++ b/KGERP/Views/BillRequisition/BillRequisitionMasterCommonList.cshtml
@@ -89,7 +89,7 @@
                                         <th>SL</th>
                                         <th>Date</th>
                                         <th>Req. No</th>
-                                        <th>Req. Type</th>
+                                        @*<th>Req. Type</th>*@
                                         <th>P. Type</th>
                                         <th>Project </th>
                                         <th style="text-align:right">Total</th>
@@ -118,7 +118,7 @@
 
 
                                             <td>@item.BillRequisitionNo</td>
-                                            <td>@item.BRTypeName</td>
+                                            @*<td>@item.BRTypeName</td>*@
                                             <td>@item.ProjectTypeName</td>
                                             <td>@item.CostCenterName</td>
 
