--- a/KGERP/Views/BillRequisition/PMBRApprovalList.cshtml
+++ b/KGERP/Views/BillRequisition/PMBRApprovalList.cshtml
@@ -86,7 +86,7 @@
                                         <th>SL</th>
                                         <th>Date</th>
                                         <th>Req. No</th>
-                                        @*<th>Req. Type</th>*@
+                                        <th>Req. Type</th>
                                         <th>P. Type</th>
                                         <th>Project </th>
                                         <th>PM Approval</th>
@@ -115,7 +115,7 @@
 
 
                                             <td>@item.BillRequisitionNo</td>
-                                            @*<td>@item.BRTypeName</td>*@
+                                            <td>@item.BRTypeName</td>
                                             <td>@item.ProjectTypeName</td>
                                             <td>@item.CostCenterName</td>
 
@@ -123,16 +123,16 @@
 
                                                 @if (@item.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.PM).AprrovalStatusId == (int)EnumBillRequisitionStatus.Pending)
                                                 {
-                                                    <span class="btn btn-warning btn-xs" style="width:70px"> @item.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.PM).AprrovalStatusName</span>
+                                                    <span class="label label-warning text-center"> @item.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.PM).AprrovalStatusName</span>
                                                 }
                                                 @if (@item.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.PM).AprrovalStatusId == (int)EnumBillRequisitionStatus.Approved)
                                                 {
-                                                    <span class="btn btn-success btn-xs" style="width:70px"> @item.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.PM).AprrovalStatusName</span>
+                                                    <span class="label label-success text-center"> @item.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.PM).AprrovalStatusName</span>
                                                 }
 
                                                 @if (@item.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.PM).AprrovalStatusId == (int)EnumBillRequisitionStatus.Rejected)
                                                 {
-                                                    <span class="btn btn-danger btn-xs" style="width:70px"> @item.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.PM).AprrovalStatusName</span>
+                                                    <span class="label label-danger text-center"> @item.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.PM).AprrovalStatusName</span>
                                                 }
                                                
                                             </td>
@@ -152,7 +152,7 @@
                                                 }
                                             </td>
                                             <td>
-                                                <a class="btn btn-sm btn-xs btn-warning" style="width:100%" target="_blank" href="~/Report/TCLBillRequisiontReport?companyId=@item.CompanyFK&billRequisitionMasterId=@item.BillRequisitionMasterId">
+                                                <a class="label label-primary text-center" style="width:100%" target="_blank" href="~/Report/TCLBillRequisiontReport?companyId=@item.CompanyFK&billRequisitionMasterId=@item.BillRequisitionMasterId">
                                                     <i class="fa fa-download"></i> Download
                                                 </a>
                                             </td>
