--- a/KGERP/Views/BillRequisition/MDBRApproveSlave.cshtml
+++ b/KGERP/Views/BillRequisition/MDBRApproveSlave.cshtml
@@ -261,23 +261,27 @@
                                                     <td style="padding:5px; text-align:center;">@item.AprrovalStatusName</td>
                                                 }
                                             }
-                                        <td style="padding:5px; text-align:center;">
-                                            @if (Model.VoucherPaymentStatus == "Paid")
-                                            {
-                                                <span class="btn btn-info btn-xs"> @Model.VoucherPaymentStatus</span>
-                                            }
-                                            else if (Model.VoucherPaymentStatus == "Pending")
-                                            {
-                                                <span class="btn btn-info btn-xs"> @Model.VoucherPaymentStatus</span>
-
-                                            }
-                                            else if (Model.VoucherPaymentStatus == "Partially Paid")
-                                            {
-                                                <span class="btn btn-info btn-xs"> @Model.VoucherPaymentStatus</span>
-
-                                            }
-                                           
-                                        </td>
+                                            <td style="padding:5px; text-align:center;">
+                                                @if (Model.VoucherPaymentStatus == "Paid")
+                                                {
+                                                    <a title="Download Report" class="" style="width:100%" target="_blank" href="~/Report/TCLBillRequisiontPaymentReport?companyId=@Model.CompanyFK&billRequisitionMasterId=@Model.BillRequisitionMasterId">
+                                                        @*<i class="fa fa-download"></i>*@ Download
+                                                        <span class="btn btn-info btn-xs"> @Model.VoucherPaymentStatus</span>
+                                                    </a>
+                                                }
+                                                else if (Model.VoucherPaymentStatus == "Pending")
+                                                {
+                                                    <a title="Download Report" class="" style="width:100%" target="_blank" href="~/Report/TCLBillRequisiontPaymentReport?companyId=@Model.CompanyFK&billRequisitionMasterId=@Model.BillRequisitionMasterId">
+                                                        <span class="btn btn-info btn-xs"> @Model.VoucherPaymentStatus</span>
+                                                    </a>
+                                                }
+                                                else if (Model.VoucherPaymentStatus == "Partially Paid")
+                                                {
+                                                    <a title="Download Report" class="" style="width:100%" target="_blank" href="~/Report/TCLBillRequisiontPaymentReport?companyId=@Model.CompanyFK&billRequisitionMasterId=@Model.BillRequisitionMasterId">
+                                                        <span class="btn btn-info btn-xs"> @Model.VoucherPaymentStatus</span>
+                                                    </a>
+                                                }
+                                            </td>
 
 
                                         </tr>
