git MDBRApproveSlave - payment status changed

--- a/KGERP/Views/BillRequisition/MDBRApproveSlave.cshtml
+++ b/KGERP/Views/BillRequisition/MDBRApproveSlave.cshtml
@@ -266,13 +266,13 @@
                                                 {
                                                     <a title="Download Report" class="" style="width:100%" target="_blank" href="~/Report/TCLBillRequisiontPaymentReport?companyId=@Model.CompanyFK&billRequisitionMasterId=@Model.BillRequisitionMasterId">
                                                         @*<i class="fa fa-download"></i>*@ Download
-                                                        <span class="btn btn-info btn-xs"> @Model.VoucherPaymentStatus</span>
+                                                        <span class="btn btn-success btn-xs"> @Model.VoucherPaymentStatus</span>
                                                     </a>
                                                 }
                                                 else if (Model.VoucherPaymentStatus == "Pending")
                                                 {
                                                     <a title="Download Report" class="" style="width:100%" target="_blank" href="~/Report/TCLBillRequisiontPaymentReport?companyId=@Model.CompanyFK&billRequisitionMasterId=@Model.BillRequisitionMasterId">
-                                                        <span class="btn btn-info btn-xs"> @Model.VoucherPaymentStatus</span>
+                                                        <span class="btn btn-warning btn-xs"> @Model.VoucherPaymentStatus</span>
                                                     </a>
                                                 }
                                                 else if (Model.VoucherPaymentStatus == "Partially Paid")
@@ -283,12 +283,15 @@
                                                 }
                                                 else
                                                 {
-                                                    if (Model.BillRequisitionMasterId > 0 && Model.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.MD).AprrovalStatusId == (int)EnumBillRequisitionStatus.Approved)
-                                                    {
-                                                        <a title="Download Report" class="" style="width:100%" target="_blank" href="~/Report/TCLBillRequisiontPaymentReport?companyId=@Model.CompanyFK&billRequisitionMasterId=@Model.BillRequisitionMasterId">
-                                                            <span class="btn btn-info btn-xs">Pending</span>
-                                                        </a>
-                                                    }
+                                                    @*if (Model.BillRequisitionMasterId > 0 && Model.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.MD).AprrovalStatusId == (int)EnumBillRequisitionStatus.Approved)
+                                                        {
+                                                            <a title="Download Report" class="" style="width:100%" target="_blank" href="~/Report/TCLBillRequisiontPaymentReport?companyId=@Model.CompanyFK&billRequisitionMasterId=@Model.BillRequisitionMasterId">
+                                                                <span class="btn btn-info btn-xs">Pending</span>
+                                                            </a>
+                                                        }*@
+                                                    <a title="Download Report" class="" style="width:100%" target="_blank" href="~/Report/TCLBillRequisiontPaymentReport?companyId=@Model.CompanyFK&billRequisitionMasterId=@Model.BillRequisitionMasterId">
+                                                        <span class="btn btn-warning btn-xs">Pending</span>
+                                                    </a>
                                                 }
                                             </td>
 
